@@ -39,44 +39,6 @@
 
 /* FIXME: refactor this out into a libproto-client.la library for the engine
  * and the test cases */
-static int
-pixbuf_proto_get_socket (GError **err)
-{
-  struct sockaddr_un  sun;
-  const char         *sock_path;
-  int                 fd;
-
-  fd = socket (PF_LOCAL, SOCK_STREAM, 0);
-  if (fd < 0)
-    {
-      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_CLIENT_ERROR_UNKNOWN,
-		   "socket: %s", strerror (errno));
-      return -1;
-    }
-
-  sock_path = sapwood_socket_path_get_default ();
-
-  memset (&sun, '\0', sizeof(sun));
-  sun.sun_family = AF_LOCAL;
-#ifdef HAVE_ABSTRACT_SOCKETS
-  strcpy (&sun.sun_path[1], sock_path);
-#else
-  strcpy (&sun.sun_path[0], sock_path);
-#endif
-  if (connect (fd, (struct sockaddr *)&sun, sizeof (sun)) < 0)
-    {
-      g_set_error (err, SAPWOOD_CLIENT_ERROR, SAPWOOD_CLIENT_ERROR_UNKNOWN,
-		   "Failed to connect to sapwood server using `%s': %s\n\n"
-		   "\t`%s' MUST be started before applications",
-		   sock_path, strerror (errno),
-		   SAPWOOD_SERVER);
-      close (fd);
-      return -1;
-    }
-
-  return fd;
-}
-
 static gboolean
 pixbuf_proto_request (const char *req,
                       ssize_t     reqlen,
