@@ -1,5 +1,15 @@
 2008-09-29  Sven Herzberg  <sven@imendio.com>
 
+	Moved pixbuf_proto_get_socket() into the shared library
+
+	* engine/sapwood-client.c,
+	* engine/sapwood-client.h: new location for this function
+	* engine/sapwood-pixmap.c,
+	* tests/double-free.c: use the shared function, not two completely
+	identical but separate ones
+
+2008-09-29  Sven Herzberg  <sven@imendio.com>
+
 	Renamed the enumeration value to match the file and library name
 
 	* engine/sapwood-client.h,
